fix some sonarqube issues and signup fonctionnality